added new pages

--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "@repo/database",
+  "name": "@repo/database-config",
   "version": "1.0.0",
   "type": "module",
+  "exports":{
+    "./database":"./dist/index.js",
+    "./models":"./dist/models/*.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"tsc -b"
   },
   "devDependencies": {
     "@repo/typescript-config": "*"
