--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slideshow-image": "^4.3.2",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
